--- a/MrCrutcherProjects/LicensePlateProject/KerasLicensePlateModel.ipynb
+++ b/MrCrutcherProjects/LicensePlateProject/KerasLicensePlateModel.ipynb
@@ -47,16 +47,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_': 0, 'A': 1, 'B': 2, 'C': 3, 'D': 4, 'E': 5, 'F': 6, 'G': 7, 'H': 8, 'I': 9, 'J': 10, 'K': 11, 'L': 12, 'M': 13, 'N': 14, 'O': 15, 'P': 16, 'Q': 17, 'R': 18, 'S': 19, 'T': 20, 'U': 21, 'V': 22, 'W': 23, 'X': 24, 'Y': 25, 'Z': 26, '0': 27, '1': 28, '2': 29, '3': 30, '4': 31, '5': 32, '6': 33, '7': 34, '8': 35, '9': 36}\n"
+      "{'_': 0, 'A': 1, 'B': 2, 'C': 3, 'D': 4, 'E': 5, 'F': 6, 'G': 7, 'H': 8, 'I': 9, 'J': 10, 'K': 11, 'L': 12, 'M': 13, 'N': 14, 'O': 15, 'P': 16, 'Q': 17, 'R': 18, 'S': 19, 'T': 20, 'U': 21, 'V': 22, 'W': 23, 'X': 24, 'Y': 25, 'Z': 26, '0': 27, '1': 28, '2': 29, '3': 30, '4': 31, '5': 32, '6': 33, '7': 34, '8': 35, '9': 36}\n",
+      "{0: '_', 1: 'A', 2: 'B', 3: 'C', 4: 'D', 5: 'E', 6: 'F', 7: 'G', 8: 'H', 9: 'I', 10: 'J', 11: 'K', 12: 'L', 13: 'M', 14: 'N', 15: 'O', 16: 'P', 17: 'Q', 18: 'R', 19: 'S', 20: 'T', 21: 'U', 22: 'V', 23: 'W', 24: 'X', 25: 'Y', 26: 'Z', 27: '0', 28: '1', 29: '2', 30: '3', 31: '4', 32: '5', 33: '6', 34: '7', 35: '8', 36: '9'}\n"
      ]
     }
    ],
    "source": [
     "key_dict = {}\n",
+    "return_letter_dict = {}\n",
     "for count, letter in enumerate(alphabet.readlines()):\n",
     "    key_dict[letter[0]] = count\n",
+    "    return_letter_dict[count] = letter[0]\n",
     "\n",
-    "print(key_dict)"
+    "print(key_dict)\n",
+    "print(return_letter_dict)"
    ]
   },
   {
@@ -82,13 +86,13 @@
     "keys = []\n",
     "letters = []\n",
     "for number in range(1, max_val):\n",
-    "    letter_image = np.loadtxt(image_path + str(number) + \".txt\").reshape(80, 60, 1) / 255.0\n",
+    "    letter_image = np.loadtxt(image_path + str(number) + \".txt\").reshape(80, 60) / 255.0\n",
     "    letters.append(letter_image)\n",
     "    \n",
     "    array = np.zeros(37, dtype=\"float32\")\n",
     "    key_char = key_lines[number][0]\n",
     "    array[key_dict[key_char]] = float(1.0)\n",
-    "    keys.append(array)\n",
+    "    keys.append(np.argmax(array))\n",
     "    \n",
     "    if number % 500 == 0:\n",
     "        print(\"Completed {}\".format(number))"
@@ -103,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "(80, 60, 1)"
+       "(80, 60)"
       ]
      },
      "execution_count": 5,
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "40c8b0fe-e39e-40e5-bbf7-38b5c88818e2",
    "metadata": {},
    "outputs": [],
@@ -126,23 +130,22 @@
     "                        kernel_size=3, activation='relu', padding=\"SAME\")\n",
     "\n",
     "model = keras.models.Sequential([\n",
-    "#     DefaultConv2D(filters=128, kernel_size=11, input_shape=[80, 60], name=\"First_Conv2D\", padding=\"SAME\"),\n",
-    "#     DefaultConv2D(filters=128, kernel_size=11, input_shape=[80, 60], name=\"Second_Conv2D\"),\n",
-    "#     keras.layers.MaxPooling2D(pool_size=2),\n",
-    "#     DefaultConv2D(filters=256, kernel_size=7, name=\"Third_Conv2D\"),\n",
-    "#     DefaultConv2D(filters=256, kernel_size=7, name=\"Fourth_Conv2D\"),\n",
-    "#     keras.layers.MaxPooling2D(pool_size=2),\n",
+    "    keras.layers.AveragePooling2D(pool_size=2, input_shape=[80, 60, 1]),\n",
+    "    keras.layers.Conv2D(filters=64, kernel_size=13, name=\"First_Conv2D\", padding=\"SAME\", activation='relu'),\n",
+    "    keras.layers.AveragePooling2D(pool_size=2),\n",
+    "    DefaultConv2D(filters=128, kernel_size=9, name=\"Second_Conv2D\"),\n",
+    "    keras.layers.AveragePooling2D(pool_size=2),\n",
     "    \n",
     "    keras.layers.Flatten(),\n",
     "    \n",
-    "    keras.layers.Dense(units = 2400, activation='relu', name=\"Dense_1\"),\n",
+    "#     keras.layers.Dense(units = 8, activation='relu', name=\"Dense_1\"),\n",
     "#     keras.layers.Dense(units = 2400, activation='relu', name=\"Dense_2\"),\n",
-    "    keras.layers.Dropout(0.5),\n",
-    "    keras.layers.Dense(units = 800, activation='relu', name=\"Dense_3\"),\n",
+    "#     keras.layers.Dropout(0.5),\n",
+    "#     keras.layers.Dense(units = 800, activation='relu', name=\"Dense_3\"),\n",
     "#     keras.layers.Dense(units = 800, activation='relu', name=\"Dense_4\"),\n",
-    "    keras.layers.Dropout(0.5),\n",
-    "    keras.layers.Dense(units = 200, activation='relu', name=\"Dense_5\"),\n",
-    "#     keras.layers.Dense(units = 200, activation='relu', name=\"Dense_6\"),\n",
+    "#     keras.layers.Dropout(0.5),\n",
+    "#     keras.layers.Dense(units = 200, activation='relu', name=\"Dense_5\"),\n",
+    "    keras.layers.Dense(units = 200, activation='relu', name=\"Dense_6\"),\n",
     "    keras.layers.Dropout(0.5),\n",
     "    keras.layers.Dense(units = 37, activation='softmax', name=\"Dense_FINAL\")\n",
     "])"
@@ -150,19 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "fbc1bc12-3ad3-422f-8d36-38f5a079be53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer=\"adam\",\n",
+    "model.compile(optimizer=\"nadam\",\n",
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'],)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "7f3c79d4-3741-46aa-a611-e00d9dd55ee7",
    "metadata": {},
    "outputs": [
@@ -170,14 +173,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3054, 80, 60)\n",
-      "(3054, 37)\n"
+      "(3054, 80, 60, 1)\n",
+      "(3054, 1)\n"
      ]
     }
    ],
    "source": [
-    "letters = tf.constant(np.array(letters, dtype=\"float32\").reshape(max_val - 1, 80, 60, ))\n",
-    "keys = tf.constant(np.array(keys, dtype=\"float32\").reshape(max_val - 1, len(key_dict), ))\n",
+    "letters = tf.constant(np.array(letters, dtype=\"float32\").reshape(max_val - 1, 80, 60, 1))\n",
+    "keys = tf.constant(np.array(keys, dtype=\"float32\").reshape(max_val - 1, 1))\n",
     "\n",
     "print(letters.shape)\n",
     "print(keys.shape)\n",
@@ -187,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "880f7612-a504-42a0-bc5d-60924ba77d52",
    "metadata": {},
    "outputs": [
@@ -195,33 +198,136 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-8f65b4d0d865>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mletters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[1;32m   1181\u001b[0m                 _r=1):\n\u001b[1;32m   1182\u001b[0m               \u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_train_batch_begin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1183\u001b[0;31m               \u001b[0mtmp_logs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1184\u001b[0m               \u001b[0;32mif\u001b[0m \u001b[0mdata_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshould_sync\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1185\u001b[0m                 \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masync_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/tensorflow/python/eager/def_function.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    887\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m       \u001b[0;32mwith\u001b[0m \u001b[0mOptionalXlaContext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jit_compile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 889\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    890\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    891\u001b[0m       \u001b[0mnew_tracing_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimental_get_tracing_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/tensorflow/python/eager/def_function.py\u001b[0m in \u001b[0;36m_call\u001b[0;34m(self, *args, **kwds)\u001b[0m\n\u001b[1;32m    915\u001b[0m       \u001b[0;31m# In this case we have created variables on the first call, so we run the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    916\u001b[0m       \u001b[0;31m# defunned version which is guaranteed to never create variables.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 917\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stateless_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# pylint: disable=not-callable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    918\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stateful_fn\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    919\u001b[0m       \u001b[0;31m# Release the lock early so that multiple threads can perform the call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "average_pooling2d (AveragePo (None, 40, 30, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "First_Conv2D (Conv2D)        (None, 40, 30, 64)        10880     \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_1 (Average (None, 20, 15, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "Second_Conv2D (Conv2D)       (None, 20, 15, 128)       663680    \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_2 (Average (None, 10, 7, 128)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 8960)              0         \n",
+      "_________________________________________________________________\n",
+      "Dense_6 (Dense)              (None, 200)               1792200   \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 200)               0         \n",
+      "_________________________________________________________________\n",
+      "Dense_FINAL (Dense)          (None, 37)                7437      \n",
+      "=================================================================\n",
+      "Total params: 2,474,197\n",
+      "Trainable params: 2,474,197\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/12\n",
+      "24/24 [==============================] - 69s 3s/step - loss: 1.5847 - accuracy: 0.6437\n",
+      "Epoch 2/12\n",
+      "24/24 [==============================] - 45s 2s/step - loss: 0.5136 - accuracy: 0.8818\n",
+      "Epoch 3/12\n",
+      "24/24 [==============================] - 44s 2s/step - loss: 0.3439 - accuracy: 0.9217\n",
+      "Epoch 4/12\n",
+      "24/24 [==============================] - 43s 2s/step - loss: 0.2522 - accuracy: 0.9460\n",
+      "Epoch 5/12\n",
+      "24/24 [==============================] - 42s 2s/step - loss: 0.2296 - accuracy: 0.9532\n",
+      "Epoch 6/12\n",
+      "24/24 [==============================] - 44s 2s/step - loss: 0.1947 - accuracy: 0.9538\n",
+      "Epoch 7/12\n",
+      "24/24 [==============================] - 43s 2s/step - loss: 0.1757 - accuracy: 0.9607\n",
+      "Epoch 8/12\n",
+      "24/24 [==============================] - 44s 2s/step - loss: 0.1421 - accuracy: 0.9692\n",
+      "Epoch 9/12\n",
+      " 4/24 [====>.........................] - ETA: 47s - loss: 0.1272 - accuracy: 0.9785"
      ]
     }
    ],
    "source": [
-    "model.fit(letters, keys, batch_size=128, epochs=5)\n",
+    "model.summary()\n",
+    "model.fit(letters, keys, batch_size=128, epochs=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2095644e-1d02-414c-8973-2c24aa235374",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_array = np.zeros((1, 80, 60, 1), dtype=\"float32\")\n",
+    "number_array[0] = letters[2]\n",
+    "history = model.predict(tf.constant(np.array(number_array, dtype=\"float32\")))\n",
+    "print(return_letter_dict[np.argmax(history)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f19302b4-447d-45f2-930b-3a4171ceeac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model._name = \"License_Plate_Model\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c7fff34-d726-4757-bbee-0a99daf4a9d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"/Users/tristanbrigham/GithubProjects/AzimuthInternship/MrCrutcherProjects/LicensePlateProject/model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df43e3d2-76c0-43d4-aa0b-e1e187a75a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2 = tf.keras.models.load_model(\"/Users/tristanbrigham/GithubProjects/AzimuthInternship/MrCrutcherProjects/LicensePlateProject/model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7028900-84ab-435c-b9c6-c1da495da8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model2.predict(tf.constant(np.array(number_array, dtype=\"float32\")))\n",
+    "print(return_letter_dict[np.argmax(history)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a8d7ae-e084-4540-85d5-3f6990fbab06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cc5ed59-4eb6-4777-8b5b-e914295c083d",
+   "id": "8620e483-3fe5-4188-a7a2-807c736076ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c55ba20d-953c-498c-a4c4-af7c2e07e506",
    "metadata": {},
    "outputs": [],
    "source": []
