--- a/MrCrutcherProjects/LicensePlateProject/KerasLicensePlateModel.ipynb
+++ b/MrCrutcherProjects/LicensePlateProject/KerasLicensePlateModel.ipynb
@@ -241,7 +241,11 @@
       "Epoch 8/12\n",
       "24/24 [==============================] - 44s 2s/step - loss: 0.1421 - accuracy: 0.9692\n",
       "Epoch 9/12\n",
-      " 4/24 [====>.........................] - ETA: 47s - loss: 0.1272 - accuracy: 0.9785"
+      "24/24 [==============================] - 60s 3s/step - loss: 0.1299 - accuracy: 0.9705\n",
+      "Epoch 10/12\n",
+      "24/24 [==============================] - 43s 2s/step - loss: 0.1282 - accuracy: 0.9699\n",
+      "Epoch 11/12\n",
+      "15/24 [=================>............] - ETA: 16s - loss: 0.0981 - accuracy: 0.9755"
      ]
     }
    ],
