--- a/MrCrutcherProjects/LicensePlateProject/KerasLicensePlateModel.ipynb
+++ b/MrCrutcherProjects/LicensePlateProject/KerasLicensePlateModel.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "880f7612-a504-42a0-bc5d-60924ba77d52",
    "metadata": {},
    "outputs": [
@@ -245,8 +245,20 @@
       "Epoch 10/12\n",
       "24/24 [==============================] - 43s 2s/step - loss: 0.1282 - accuracy: 0.9699\n",
       "Epoch 11/12\n",
-      "15/24 [=================>............] - ETA: 16s - loss: 0.0981 - accuracy: 0.9755"
+      "24/24 [==============================] - 43s 2s/step - loss: 0.1112 - accuracy: 0.9725\n",
+      "Epoch 12/12\n",
+      "24/24 [==============================] - 45s 2s/step - loss: 0.1091 - accuracy: 0.9718\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7f83fa8994f0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -256,10 +268,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2095644e-1d02-414c-8973-2c24aa235374",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "number_array = np.zeros((1, 80, 60, 1), dtype=\"float32\")\n",
     "number_array[0] = letters[2]\n",
@@ -269,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f19302b4-447d-45f2-930b-3a4171ceeac9",
    "metadata": {},
    "outputs": [],
@@ -279,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7c7fff34-d726-4757-bbee-0a99daf4a9d3",
    "metadata": {},
    "outputs": [],
@@ -289,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "df43e3d2-76c0-43d4-aa0b-e1e187a75a3b",
    "metadata": {},
    "outputs": [],
@@ -299,10 +319,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c7028900-84ab-435c-b9c6-c1da495da8e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "history = model2.predict(tf.constant(np.array(number_array, dtype=\"float32\")))\n",
     "print(return_letter_dict[np.argmax(history)])"
@@ -310,20 +338,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a5a8d7ae-e084-4540-85d5-3f6990fbab06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"License_Plate_Model\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "average_pooling2d (AveragePo (None, 40, 30, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "First_Conv2D (Conv2D)        (None, 40, 30, 64)        10880     \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_1 (Average (None, 20, 15, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "Second_Conv2D (Conv2D)       (None, 20, 15, 128)       663680    \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_2 (Average (None, 10, 7, 128)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 8960)              0         \n",
+      "_________________________________________________________________\n",
+      "Dense_6 (Dense)              (None, 200)               1792200   \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 200)               0         \n",
+      "_________________________________________________________________\n",
+      "Dense_FINAL (Dense)          (None, 37)                7437      \n",
+      "=================================================================\n",
+      "Total params: 2,474,197\n",
+      "Trainable params: 2,474,197\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8620e483-3fe5-4188-a7a2-807c736076ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"License_Plate_Model\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "average_pooling2d (AveragePo (None, 40, 30, 1)         0         \n",
+      "_________________________________________________________________\n",
+      "First_Conv2D (Conv2D)        (None, 40, 30, 64)        10880     \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_1 (Average (None, 20, 15, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "Second_Conv2D (Conv2D)       (None, 20, 15, 128)       663680    \n",
+      "_________________________________________________________________\n",
+      "average_pooling2d_2 (Average (None, 10, 7, 128)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 8960)              0         \n",
+      "_________________________________________________________________\n",
+      "Dense_6 (Dense)              (None, 200)               1792200   \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 200)               0         \n",
+      "_________________________________________________________________\n",
+      "Dense_FINAL (Dense)          (None, 37)                7437      \n",
+      "=================================================================\n",
+      "Total params: 2,474,197\n",
+      "Trainable params: 2,474,197\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model2.summary()"
    ]
